@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: May 27, 2009</p>
+      <p>Last Updated: May 28, 2009</p>
     </td>
   </tr>
 </table>
@@ -1436,6 +1436,9 @@ nuttx-0.4.7 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* configs/eagle100/*/Make.defs:  Added configuration options that should make
 	  it possible to build NuttX for the Eagle100 using CodeSourcery 2009q1 toolchain
 	  and the devkitARM GNU toolchain.
+	* configs/mcu123-lpc214x/src: Corrected some logic in the LPC2148 SPI receive block
+	  logic.  Re-verified SDC ver1.x support with 1Gb Toshiba SDC, 1Gb PNY SDC, 2Gb SanDisk SDC,
+	  and 4Gb Kingston SDHC.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
