@@ -301,9 +301,21 @@ CONFIG_FS_FAT=y
 CONFIG_FS_ROMFS=n
 
 #
-# MMC/SD configuration
+# SPI-based MMC/SD driver
+#
+# CONFIG_MMCSD_NSLOTS
+#   Number of MMC/SD slots supported by the driver
+# CONFIG_MMCSD_READONLY
+#   Provide read-only access (default is read/write)
+# CONFIG_MMCSD_SPICLOCK - Maximum SPI clock to drive MMC/SD card.
+#   Default is 20MHz.
+# CONFIG_MMCSD_SYNCHRONIZE
+#   Special synchronization logic needed
+#
 CONFIG_MMCSD_NSLOTS=1
 CONFIG_MMCSD_READONLY=n
+#CONFIG_MMCSD_SPICLOCK=20000000
+CONFIG_MMCSD_SYNCHRONIZE=y
 
 #
 # SPI-based MMC/SD driver
